deploy/gateway/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-product
  namespace: ${NAMESPACE}
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      istio: gateway-product
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      creationTimestamp: null
      labels:
        istio: gateway-product
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - image: auto
          imagePullPolicy: Always
          name: istio-proxy
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
