deploy/gateway/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: product-api
  namespace: ${NAMESPACE}
spec:
  host: ${EXTERNALNAME}
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: gateway-service
    weight: 100
  wildcardPolicy: None
